--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -7,5 +7,6 @@
     font-weight: bold;
     color: #777;
     /*text-transform: uppercase;*/
-    padding: 10px 3px;
+    padding-bottom: 7px;
+    padding-top: 5px;
 }
